# ai-chatbot

./: .env.example  .gitignore  PROJECT_PLAN.md  docker-compose.yml
api-tests/AI Chatbot APIs/: AI 聊天.bru  bruno.json  上传文档.bru
backend/: Dockerfile  manage.py  pyproject.toml  test_chat_logic.py  test_funasr.py
backend/api/: __init__.py  auth.py  chat.py  documents.py  stt.py  tts.py
backend/chat/: models.py
backend/chat/migrations/: 0001_initial.py  0002_chatmessage_elapsed_time.py
backend/config/: settings.py  urls.py  wsgi.py
backend/core/: llm.py  mcp_tools.py
backend/documents/: admin.py  apps.py  models.py  services.py
backend/documents/migrations/: 0001_initial.py  0002_alter_document_file.py
backend/system/: admin.py  apps.py  models.py
backend/system/migrations/: 0001_initial.py  0002_llmconfig_updated_at_alter_llmconfig_api_key_and_more.py  0003_llmconfig_available_models_llmconfig_last_synced.py  0004_alter_mcpserverconfig_server_type.py
data/postgres/: postmaster.pid
data/postgres/base/1/: 2619
data/postgres/base/16384/: 1247  1249  1249_fsm  1255  1259  1259_fsm  13407  16389  16390  16395  16397  16398  16401  16403  16405  16406  16409  16411  16419  16425  16426  16429  16431  16433  16445  16452  16468  16469  16481  16497  16498  16504  16516  16517  16526  16530  16531  16533  16534  16535  (+100 more)
data/postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
data/postgres/pg_xact/: 0000
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  components.d.ts  style.css
frontend/src/components/: ChatMessage.vue  DigitalHuman.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  theme.ts
frontend/src/views/: ChatView.vue  LoginView.vue
